syntax = "proto3";

package pb.spot;

option go_package = "server/proto/v2/pbspot";

import "google/api/annotations.proto";
service Api {
    rpc SetWithdraw (SetRequestWithdrawal) returns (ResponseWithdrawal) {
        option (google.api.http) = {
            post: "/v2/spot/set-withdrawal",
            body: "*"
        };
    }
    rpc CancelWithdraw (CancelRequestWithdrawal) returns (ResponseWithdrawal) {
        option (google.api.http) = {
            post: "/v2/spot/cancel-withdrawal",
            body: "*"
        };
    }
}

message SetRequestWithdrawal {
    int64 id = 1;
    string symbol = 2;
    string address = 3;
    string email_code = 4;
    string factor_code = 6;
    double price = 7;
    double quantity = 8;
    bool refresh = 9;
    string platform = 10;
}
message CancelRequestWithdrawal {
    int64 id = 1;
}
message ResponseWithdrawal {
    bool success = 1;
}